--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,6 +110,10 @@ p {
    margin-left: auto;
    margin-right: auto;
 }
+.img-resize {
+  width: 90%;
+  height: 90%;
+}
 .inner-div {
    width: 70%;
    margin: 0 auto;
